--- a/Workspace/Cool Stuff.ipynb
+++ b/Workspace/Cool Stuff.ipynb
@@ -9,27 +9,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"ahh shit, here we go again is a great meme\""
+    "text = \"wow this is a cool thing\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'wow this is a cool thing'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,16 +56,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index: 0    w\n",
+      "Index: 1    o\n",
+      "Index: 2    w\n",
+      "Index: 3     \n",
+      "Index: 4    t\n",
+      "Index: 5    h\n",
+      "Index: 6    i\n",
+      "Index: 7    s\n",
+      "Index: 8     \n",
+      "Index: 9    i\n",
+      "Index: 10    s\n",
+      "Index: 11     \n",
+      "Index: 12    a\n",
+      "Index: 13     \n",
+      "Index: 14    c\n",
+      "Index: 15    o\n",
+      "Index: 16    o\n",
+      "Index: 17    l\n",
+      "Index: 18     \n",
+      "Index: 19    t\n",
+      "Index: 20    h\n",
+      "Index: 21    i\n",
+      "Index: 22    n\n",
+      "\n",
+      "STOP\n",
+      "Found n at index 22\n"
+     ]
+    }
+   ],
    "source": [
     "find_n(text, 'n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,9 +114,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Call: 0    wow this is a cool thing\n",
+      "Call: 1    ow this is a cool thing\n",
+      "Call: 2    w this is a cool thing\n",
+      "Call: 3     this is a cool thing\n",
+      "Call: 4    this is a cool thing\n",
+      "Call: 5    his is a cool thing\n",
+      "Call: 6    is is a cool thing\n",
+      "Call: 7    s is a cool thing\n",
+      "Call: 8     is a cool thing\n",
+      "Call: 9    is a cool thing\n",
+      "Call: 10    s a cool thing\n",
+      "Call: 11     a cool thing\n",
+      "Call: 12    a cool thing\n",
+      "Call: 13     cool thing\n",
+      "Call: 14    cool thing\n",
+      "Call: 15    ool thing\n",
+      "Call: 16    ol thing\n",
+      "Call: 17    l thing\n",
+      "Call: 18     thing\n",
+      "Call: 19    thing\n",
+      "Call: 20    hing\n",
+      "Call: 21    ing\n",
+      "Call: 22    ng\n",
+      "\n",
+      "STOP\n",
+      "Found n at index 22\n"
+     ]
+    }
+   ],
    "source": [
     "find_n(text)"
    ]
@@ -86,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,35 +216,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "     CALL: 0\n",
+      "\n",
+      "Number of elements: 6    List: [0, 1, 2, 3, 4, 5]\n",
+      "\n",
+      "     CALL: 1\n",
+      "\n",
+      "Number of elements: 3    List: [3, 4, 5]\n",
+      "\n",
+      "     CALL: 2\n",
+      "\n",
+      "Number of elements: 2    List: [4, 5]\n",
+      "\n",
+      "     CALL: 3\n",
+      "\n",
+      "Number of elements: 1    List: [5]\n",
+      "\n",
+      "     CALL: 4\n",
+      "\n",
+      "Number of elements: 1    List: [4]\n",
+      "Upper: 5    Lower: 4\n",
+      "Keep 5\n",
+      "\n",
+      "     CALL: 5\n",
+      "\n",
+      "Number of elements: 1    List: [3]\n",
+      "Upper: 5    Lower: 3\n",
+      "Keep 5\n",
+      "\n",
+      "     CALL: 6\n",
+      "\n",
+      "Number of elements: 3    List: [0, 1, 2]\n",
+      "\n",
+      "     CALL: 7\n",
+      "\n",
+      "Number of elements: 2    List: [1, 2]\n",
+      "\n",
+      "     CALL: 8\n",
+      "\n",
+      "Number of elements: 1    List: [2]\n",
+      "\n",
+      "     CALL: 9\n",
+      "\n",
+      "Number of elements: 1    List: [1]\n",
+      "Upper: 2    Lower: 1\n",
+      "Keep 2\n",
+      "\n",
+      "     CALL: 10\n",
+      "\n",
+      "Number of elements: 1    List: [0]\n",
+      "Upper: 2    Lower: 0\n",
+      "Keep 2\n",
+      "Upper: 5    Lower: 2\n",
+      "Keep 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mistero(list(range(6)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "     CALL: 11\n",
+      "\n",
+      "Number of elements: 7    List: [-1, 0, 10, 10000, 50, 66, 80]\n",
+      "\n",
+      "     CALL: 12\n",
+      "\n",
+      "Number of elements: 4    List: [10000, 50, 66, 80]\n",
+      "\n",
+      "     CALL: 13\n",
+      "\n",
+      "Number of elements: 2    List: [66, 80]\n",
+      "\n",
+      "     CALL: 14\n",
+      "\n",
+      "Number of elements: 1    List: [80]\n",
+      "\n",
+      "     CALL: 15\n",
+      "\n",
+      "Number of elements: 1    List: [66]\n",
+      "Upper: 80    Lower: 66\n",
+      "Keep 80\n",
+      "\n",
+      "     CALL: 16\n",
+      "\n",
+      "Number of elements: 2    List: [10000, 50]\n",
+      "\n",
+      "     CALL: 17\n",
+      "\n",
+      "Number of elements: 1    List: [50]\n",
+      "\n",
+      "     CALL: 18\n",
+      "\n",
+      "Number of elements: 1    List: [10000]\n",
+      "Upper: 50    Lower: 10000\n",
+      "Keep 10000\n",
+      "Upper: 80    Lower: 10000\n",
+      "Keep 10000\n",
+      "\n",
+      "     CALL: 19\n",
+      "\n",
+      "Number of elements: 3    List: [-1, 0, 10]\n",
+      "\n",
+      "     CALL: 20\n",
+      "\n",
+      "Number of elements: 2    List: [0, 10]\n",
+      "\n",
+      "     CALL: 21\n",
+      "\n",
+      "Number of elements: 1    List: [10]\n",
+      "\n",
+      "     CALL: 22\n",
+      "\n",
+      "Number of elements: 1    List: [0]\n",
+      "Upper: 10    Lower: 0\n",
+      "Keep 10\n",
+      "\n",
+      "     CALL: 23\n",
+      "\n",
+      "Number of elements: 1    List: [-1]\n",
+      "Upper: 10    Lower: -1\n",
+      "Keep 10\n",
+      "Upper: 10000    Lower: 10\n",
+      "Keep 10000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10000"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mistero([-1,0,10,10000,50,66,80])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -187,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -390,27 +605,6 @@
    "source": [
     "stuff()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
